--- a/index.qmd
+++ b/index.qmd
@@ -7,3 +7,7 @@
 ## Ders1
 
 *28 Şubat 2025 9:30* | **İçerik**: İlk derste, dönem boyunca kullanacağımız import-transform-model-communicate akışına genel bir bakış yapılacak. Tidyverse hakkında bilgi verilecektir. [Sunum linki](ders01.qmd)
+
+## Ders2
+
+*7 Mart 2025 9:30* | **İçerik**: *unvotes* verisi üzerinde **select** ve **filter** komutları gösterildi. [Sunum linki](ders02.qmd)
