--- a/ders08.qmd
+++ b/ders08.qmd
@@ -508,6 +508,39 @@ newplot <- baseplot + theme_classic()
 ggsave(newplot, filename="gpd-health.png", dpi = 200, width = 6, height = 6)
 ```
 
+## Custom plot
+
+Let's plot a custom plot showing Turkey's change over years, adding OECD mean as horizontal line with The Economist theme. Let's prepare the data to be overlaid:
+
+```{r}
+milli <- gapminder |> filter(country=="Turkey")
+etiket <- milli |> filter(year==1982)
+oecd_data <- tibble(country="oecd",year=2007,life_mean=81)
+```
+
+##
+
+```{r}
+#| output-location: slide
+#| fig-width: 12
+#| fig-height: 8
+
+gapminder |>
+  filter(year=="2007") |>
+  ggplot(aes(x=gdpPercap, y=lifeExp, alpha=year)) + 
+  geom_smooth() +
+  geom_point() + 
+  scale_x_log10() +
+  geom_point(data=milli, color="red") +
+  geom_hline(data=oecd_data, 
+             aes(yintercept=life_mean), 
+             color="gray", 
+             linetype="dashed") +
+  geom_text(data=etiket, aes(label=country)) +
+  facet_wrap(~continent) + 
+  ylim(0,100) + 
+  theme_economist()
+```
 
 ## Galleries {.smaller}
 
