--- a/index.qmd
+++ b/index.qmd
@@ -18,19 +18,19 @@
 
 ## Ders4
 
-*20 Ekim 2025 9:30* | **İçerik**: Dosya okuma komutları gösterildi. [Sunum linki](ders-import.qmd)
+*20 Ekim 2025 9:30* | **İçerik**: *unvotes* verisi üzerinde **mutate** ve **summarize** komutları gösterildi. [Sunum linki](ders-mutate-summarize.qmd) (Quiz1)
 
 ## Ders5
 
-*27 Ekim  2025 9:30* | **İçerik**: Tablo şeklini değiştirme (pivot) ve tablo birleştirme (join). [Sunum linki](ders-pivot-join.qmd)
+*27 Ekim  2025 9:30* | **İçerik**: Dosya okuma komutları gösterildi. [Sunum linki](ders-import.qmd)
 
 ## Ders6
 
-*3 Kasım 2025 9:30* | **İçerik**: *tidytext* ile doğal dil işleme. [Sunum linki](ders-tidytext.qmd)
+*3 Kasım 2025 9:30* | **İçerik**: Tablo şeklini değiştirme (pivot) ve tablo birleştirme (join). [Sunum linki](ders-pivot-join.qmd)
 
 ## Ders7
 
-*10 Kasım 2025 9:30* | **İçerik**: *ggplot* ile görselleştirme. [Sunum linki](ders-ggplot.qmd)
+*10 Kasım 2025 9:30* | **İçerik**: *ggplot* ile görselleştirme. [Sunum linki](ders-ggplot.qmd) (Quiz2)
 
 ## Vize1
 
@@ -42,7 +42,7 @@
 
 ## Ders9
 
-*1 Aralık 2025 9:30* | **İçerik**: *quarto* veya *Rmarkdown* ile rapor, websayfası veya sunum oluşturma. [Sunum linki](ders-quarto.qmd)
+*1 Aralık 2025 9:30* | **İçerik**: *quarto* veya *Rmarkdown* ile rapor, websayfası veya sunum oluşturma. [Sunum linki](ders-quarto.qmd) (Quiz3)
 
 ## Vize 2
 
@@ -54,7 +54,7 @@
 
 ## Ders11
 
-*22 Aralık 2025 9:30* | **İçerik**: *tidytext* ile doğal dil işleme. [Sunum linki](ders-tidytext.qmd)
+*22 Aralık 2025 9:30* | **İçerik**: *tidytext* ile doğal dil işleme. [Sunum linki](ders-tidytext.qmd) (Quiz4)
 
 ## Ders12
 
